--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=7">
     <meta name="description" content="A simple music player made with HTML, CSS and JavaScript">
     <meta name="keywords" content="HTML, CSS, JS, Javascript, JavaScript, Music, Player">
+    <link rel="stylesheet" href="public/css/normalize.css">
+    <link rel="stylesheet" href="public/css/main.css">
     <title>Web Music Player</title>
   </head>
   <body>
