--- a/index.html
+++ b/index.html
@@ -8,11 +8,33 @@
     <meta name="keywords" content="HTML, CSS, JS, Javascript, JavaScript, Music, Player">
     <link rel="stylesheet" href="public/css/normalize.css">
     <link rel="stylesheet" href="public/css/main.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
     <title>Web Music Player</title>
   </head>
   <body>
     <div id="player">
-      
+      <img src="public/img/ark.jpg" alt="About You" class="music-thumb">
+
+      <div class="music-data">
+        <p class="music-title">Ark</p>
+        <span class="author">Ship Wrek & Zookeepers</span>
+      </div>
+
+      <div class="controls">
+        <div class="btn-container">
+          <button id="previous">
+            <i class="fas fa-backward"></i>
+          </button>
+
+          <button id="music-state">
+            <i class="fas fa-play"></i>
+          </button>
+
+          <button id="next">
+            <i class="fas fa-forward"></i>
+          </button>
+        </div>
+      </div>
     </div>
   </body>
 </html>
