--- a/index.html
+++ b/index.html
@@ -13,14 +13,18 @@
   </head>
   <body>
     <div id="player">
-      <img src="public/img/ark.jpg" alt="About You" class="music-thumb">
+      <img src="public/img/about_you.jpg" alt="About You" class="music-thumb">
 
       <div class="music-data">
-        <p class="music-title">Ark</p>
-        <span class="author">Ship Wrek & Zookeepers</span>
+        <p class="music-title">undefined</p>
+        <span class="author">undefined</span>
       </div>
 
       <div class="controls">
+        <div class="progress">
+          <input type="range" id="progress-bar" min="0" max="1" step="0.01" value="0">
+        </div>
+
         <div class="btn-container">
           <button id="previous">
             <i class="fas fa-backward"></i>
@@ -32,6 +36,18 @@
 
           <button id="next">
             <i class="fas fa-forward"></i>
+          </button>
+        </div>
+
+        <div class="config">
+          <button>
+            <i class="far fa-heart"></i>
+          </button>
+          <button>
+            <i class="fas fa-random"></i>
+          </button>
+          <button>
+            <i class="fas fa-redo-alt"></i>
           </button>
         </div>
       </div>
